--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,7 +281,7 @@ endif()
 if(OpenCV_FOUND)
   target_link_libraries(darknet PRIVATE ${OpenCV_LINKED_COMPONENTS})
   target_link_libraries(libdarknet PUBLIC ${OpenCV_LINKED_COMPONENTS})
-  target_include_directories(libdarknet PUBLIC ${OpenCV_INCLUDE_DIRS})
+  target_include_directories(libdarknet PUBLIC $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>)
   target_compile_definitions(darknet PRIVATE -DOPENCV)
   target_compile_definitions(libdarknet PUBLIC -DOPENCV)
 endif()
