--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,3 +81,52 @@ jobs:
         with:
           name: yolo-core-vcpkg-${{ runner.os }}
           path: ${{ github.workspace }}/build/install/bin
+
+  windows-cuda-vcpkg:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install CUDA
+        run: |
+          choco install cuda -y  
+          $env:ChocolateyInstall = Convert-Path "$((Get-Command choco).Path)\..\.."
+          Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
+          refreshenv
+      
+      - uses: lukka/get-cmake@latest
+      
+      - name: Restore from cache and run vcpkg
+        env:
+          vcpkgResponseFile: ${{ github.workspace }}/cmake/vcpkg_windows_cuda.diff
+          CUDA_PATH: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDA_PATH_V10_2: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDA_TOOLKIT_ROOT_DIR: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDACXX: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2\\bin\\nvcc.exe"
+        uses: lukka/run-vcpkg@v2
+        with:
+          vcpkgArguments: '@${{ env.vcpkgResponseFile }}'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+          vcpkgGitCommitId: 'aa0b9d7ca9e1b98e7bb18538f04dd39e7a41d3ff'
+          appendedCacheKey: ${{ hashFiles(env.vcpkgResponseFile) }}
+      
+      - name: Build with CMake and Ninja
+        env:  
+          CUDA_PATH: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDA_PATH_V10_2: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDA_TOOLKIT_ROOT_DIR: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
+          CUDACXX: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2\\bin\\nvcc.exe"
+        uses: lukka/run-cmake@v2
+        with:
+          cmakeListOrSettingJson: CMakeListTxtAdvanced
+          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+          useVcpkgToolchainFile: true
+          buildDirectory: '${{ runner.workspace }}/build'
+          cmakeBuildType: 'Release'
+          cmakeAppendedArgs: "-DBUILD_SHARED_LIBS=OFF"
+          buildWithCMakeArgs: '--target install'
+      
+      - uses: actions/upload-artifact@v2
+        with:
+          name: yolo-core-vcpkg-${{ runner.os }}
+          path: ${{ github.workspace }}/build/install/bin
