refactor: decouple exe from lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,7 @@ set(Darknet_VERSION ${Darknet_MAJOR_VERSION}.${Darknet_MINOR_VERSION}.${Darknet_
 
 option(CMAKE_VERBOSE_MAKEFILE "Create verbose makefile" OFF)
 option(CUDA_VERBOSE_BUILD "Create verbose CUDA build" OFF)
-option(BUILD_SHARED_LIBS "Create dark as a shared library" ON)
 option(BUILD_AS_CPP "Build Darknet using C++ compiler also for C files" ON)
-option(ENABLE_OPENCV "Enable OpenCV integration" ON)
 option(ENABLE_CUDA "Enable CUDA support" ON)
 option(ENABLE_CUDNN "Enable CUDNN" ON)
 option(ENABLE_CUDNN_HALF "Enable CUDNN Half precision" ON)
@@ -89,39 +87,35 @@ if(MSVC)
   find_package(PThreads_windows REQUIRED)
 endif()
 
-if(ENABLE_OPENCV)
-  find_package(OpenCV)
-  if(OpenCV_FOUND)
-    if(SELECT_OPENCV_MODULES)
-      if(TARGET opencv_world)
-        list(APPEND OpenCV_LINKED_COMPONENTS "opencv_world")
-      else()
-        if(TARGET opencv_core)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_core")
-        endif()
-        if(TARGET opencv_highgui)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_highgui")
-        endif()
-        if(TARGET opencv_imgproc)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgproc")
-        endif()
-        if(TARGET opencv_video)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_video")
-        endif()
-        if(TARGET opencv_videoio)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_videoio")
-        endif()
-        if(TARGET opencv_imgcodecs)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgcodecs")
-        endif()
-        if(TARGET opencv_text)
-          list(APPEND OpenCV_LINKED_COMPONENTS "opencv_text")
-        endif()
-      endif()
-    else()
-      list(APPEND OpenCV_LINKED_COMPONENTS ${OpenCV_LIBS})
+find_package(OpenCV REQUIRED)
+if(SELECT_OPENCV_MODULES)
+  if(TARGET opencv_world)
+    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_world")
+  else()
+    if(TARGET opencv_core)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_core")
+    endif()
+    if(TARGET opencv_highgui)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_highgui")
+    endif()
+    if(TARGET opencv_imgproc)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgproc")
+    endif()
+    if(TARGET opencv_video)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_video")
+    endif()
+    if(TARGET opencv_videoio)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_videoio")
+    endif()
+    if(TARGET opencv_imgcodecs)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgcodecs")
+    endif()
+    if(TARGET opencv_text)
+      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_text")
     endif()
   endif()
+else()
+  list(APPEND OpenCV_LINKED_COMPONENTS ${OpenCV_LIBS})
 endif()
 
 find_package(Stb REQUIRED)
@@ -233,18 +227,17 @@ if(BUILD_AS_CPP)
 endif()
 
 add_library(libdarknet ${sources} ${headers} ${cuda_sources})
+target_compile_definitions(libdarknet PRIVATE LIB_EXPORTS=1)
 set_target_properties(libdarknet PROPERTIES POSITION_INDEPENDENT_CODE ON)
 if(ENABLE_CUDA)
   set_target_properties(libdarknet PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-endif()
-if(BUILD_SHARED_LIBS)
-  target_compile_definitions(libdarknet PRIVATE LIB_EXPORTS=1)
 endif()
 if(BUILD_AS_CPP)
   set_target_properties(libdarknet PROPERTIES LINKER_LANGUAGE CXX)
 endif()
 
-add_executable(darknet ${CMAKE_CURRENT_LIST_DIR}/src/darknet.cpp ${sources} ${headers} ${cuda_sources})
+add_executable(darknet ${CMAKE_CURRENT_LIST_DIR}/src/darknet.cpp)
+add_dependencies(darknet libdarknet)
 if(BUILD_AS_CPP)
   set_source_files_properties(${CMAKE_CURRENT_LIST_DIR}/src/darknet.cpp PROPERTIES LANGUAGE CXX)
   set_target_properties(darknet PROPERTIES LINKER_LANGUAGE CXX)
@@ -264,16 +257,15 @@ target_include_directories(libdarknet PUBLIC
 target_compile_definitions(darknet PRIVATE -DUSE_CMAKE_LIBS)
 target_compile_definitions(libdarknet PRIVATE -DUSE_CMAKE_LIBS)
 
-target_include_directories(darknet PUBLIC ${GFLAGS_INCLUDE_DIRS})
-target_link_libraries(darknet PUBLIC ${GFLAGS_LIBRARIES})
+target_link_libraries(darknet PRIVATE libdarknet)
+
+target_include_directories(darknet PRIVATE ${GFLAGS_INCLUDE_DIRS})
+target_link_libraries(darknet PRIVATE ${GFLAGS_LIBRARIES})
 
 if(CUDNN_FOUND)
-  target_link_libraries(darknet PRIVATE CuDNN::CuDNN)
   target_link_libraries(libdarknet PRIVATE CuDNN::CuDNN)
-  target_compile_definitions(darknet PRIVATE -DCUDNN)
   target_compile_definitions(libdarknet PUBLIC -DCUDNN)
   if(ENABLE_CUDNN_HALF)
-    target_compile_definitions(darknet PRIVATE -DCUDNN_HALF)
     target_compile_definitions(libdarknet PUBLIC -DCUDNN_HALF)
   endif()
 endif()
@@ -287,8 +279,6 @@ if(OpenCV_FOUND)
 endif()
 
 if(OPENMP_FOUND)
-  target_link_libraries(darknet PRIVATE OpenMP::OpenMP_CXX)
-  target_link_libraries(darknet PRIVATE OpenMP::OpenMP_C)
   target_link_libraries(libdarknet PUBLIC OpenMP::OpenMP_CXX)
   target_link_libraries(libdarknet PUBLIC OpenMP::OpenMP_C)
 endif()
@@ -299,8 +289,6 @@ if(CMAKE_COMPILER_IS_GNUCC)
 endif()
 
 if(MSVC)
-  target_link_libraries(darknet PRIVATE PThreads_windows::PThreads_windows)
-  target_link_libraries(darknet PRIVATE wsock32 ws2_32)
   target_link_libraries(libdarknet PUBLIC PThreads_windows::PThreads_windows)
   target_link_libraries(libdarknet PUBLIC wsock32 ws2_32)
   target_compile_definitions(darknet PRIVATE -D_CRT_RAND_S -DNOMINMAX -D_USE_MATH_DEFINES)
@@ -308,14 +296,13 @@ if(MSVC)
   target_compile_definitions(libdarknet PUBLIC -D_CRT_SECURE_NO_WARNINGS)
 endif()
 
-target_link_libraries(darknet PRIVATE Threads::Threads)
 target_link_libraries(libdarknet PUBLIC Threads::Threads)
 
 if(ENABLE_CUDA)
   target_include_directories(darknet PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
   target_include_directories(libdarknet PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-  target_link_libraries(darknet PRIVATE curand cublas cuda)
-  target_link_libraries(libdarknet PRIVATE curand cublas cuda)
+  target_link_libraries(darknet PRIVATE cuda cudart cublas curand)
+  target_link_libraries(libdarknet PRIVATE cuda cublas curand)
   set_target_properties(libdarknet PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
   target_compile_definitions(darknet PRIVATE -DGPU)
   target_compile_definitions(libdarknet PUBLIC -DGPU)
