--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,3 +1,3 @@
-#define MAJOR_VERSION @Darknet_MAJOR_VERSION@
-#define MINOR_VERSION @Darknet_MINOR_VERSION@
-#define PATCH_VERSION @Darknet_PATCH_VERSION@
+#define MAJOR_VERSION @YOLO_CORE_MAJOR_VERSION@
+#define MINOR_VERSION @YOLO_CORE_MINOR_VERSION@
+#define PATCH_VERSION @YOLO_CORE_PATCH_VERSION@
