--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,7 +295,8 @@ if(USE_INTEGRATED_LIBS)
   target_compile_definitions(lib_yolo_core PRIVATE -D_TIMESPEC_DEFINED)
 endif()
 
-set_target_properties(lib_yolo_core PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_LIST_DIR}/src/yolo_core.h)
+set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set_target_properties(lib_yolo_core PROPERTIES PUBLIC_HEADER "${SRC_DIR}/yolo_core.h;${SRC_DIR}/box.h;${SRC_DIR}/libapi.h;${SRC_DIR}/option_list.h;${SRC_DIR}/list.h")
 set_target_properties(lib_yolo_core PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
 install(TARGETS yolo_core
