refactor: training detector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,12 +68,6 @@ else()
   endif()
 endif()
 
-if(WIN32 AND ENABLE_CUDA AND CMAKE_MAKE_PROGRAM MATCHES "ninja")
-  option(SELECT_OPENCV_MODULES "Use only few selected OpenCV modules to circumvent 8192 char limit when using Ninja on Windows" ON)
-else()
-  option(SELECT_OPENCV_MODULES "Use only few selected OpenCV modules to circumvent 8192 char limit when using Ninja on Windows" OFF)
-endif()
-
 if(USE_INTEGRATED_LIBS)
   set(PThreads_windows_DIR ${CMAKE_CURRENT_LIST_DIR}/3rdparty/pthreads CACHE PATH "Path where pthreads for windows can be located")
 endif()
@@ -87,36 +81,6 @@ if(MSVC)
 endif()
 
 find_package(OpenCV REQUIRED)
-if(SELECT_OPENCV_MODULES)
-  if(TARGET opencv_world)
-    list(APPEND OpenCV_LINKED_COMPONENTS "opencv_world")
-  else()
-    if(TARGET opencv_core)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_core")
-    endif()
-    if(TARGET opencv_highgui)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_highgui")
-    endif()
-    if(TARGET opencv_imgproc)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgproc")
-    endif()
-    if(TARGET opencv_video)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_video")
-    endif()
-    if(TARGET opencv_videoio)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_videoio")
-    endif()
-    if(TARGET opencv_imgcodecs)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_imgcodecs")
-    endif()
-    if(TARGET opencv_text)
-      list(APPEND OpenCV_LINKED_COMPONENTS "opencv_text")
-    endif()
-  endif()
-else()
-  list(APPEND OpenCV_LINKED_COMPONENTS ${OpenCV_LIBS})
-endif()
-
 find_package(Stb REQUIRED)
 find_package(OpenMP)
 
@@ -253,11 +217,9 @@ if(CUDNN_FOUND)
 endif()
 
 if(OpenCV_FOUND)
-  target_link_libraries(yolo_core PRIVATE ${OpenCV_LINKED_COMPONENTS})
-  target_link_libraries(lib_yolo_core PUBLIC ${OpenCV_LINKED_COMPONENTS})
-  target_include_directories(lib_yolo_core PUBLIC $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>)
-  target_compile_definitions(yolo_core PRIVATE -DOPENCV)
-  target_compile_definitions(lib_yolo_core PUBLIC -DOPENCV)
+  target_link_libraries(yolo_core PRIVATE ${OpenCV_LIBS})
+  target_link_libraries(lib_yolo_core PRIVATE ${OpenCV_LIBS})
+  target_compile_definitions(lib_yolo_core PRIVATE -DOPENCV)
 endif()
 
 if(OPENMP_FOUND)
