--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,7 +151,7 @@ jobs:
       
       - name: Restore from cache and run vcpkg
         env:
-          vcpkgResponseFile: ${{ github.workspace }}/cmake/vcpkg_windows_cuda.diff  
+          vcpkgResponseFile: ${{ github.workspace }}/cmake/vcpkg_windows.diff  
           CUDA_PATH: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
           CUDA_PATH_V10_2: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
           CUDA_TOOLKIT_ROOT_DIR: "C:\\Program\ Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v10.2"
